--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - gallery.html</title>
-  <link rel="stylesheet" href="styles/style1.css">
+  <link rel="stylesheet" href="stylesheets/style1.css">
 
 </head>
 <body>
